--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,9 +40,12 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.5.0",
+    "prettier": "3.7.3",
     "typescript-eslint": "^8.48.0"
   }
 }
